--- a/ourpets.html
+++ b/ourpets.html
@@ -39,7 +39,9 @@
         </div>
       </header>
       <main>
-        <div class="container">
+        <section>
+          <div class="holder-looking-pets">
+            <div class="container">
           <div class="depiction">
             <h2>
               Our friends who<br />
@@ -88,7 +90,6 @@
                     <span class="close">&times;</span>
                   </div>
                 </div>
-                <!--- pets-popup --->
               </figure>
             </div>
             <div class="col-pets">
@@ -132,7 +133,6 @@
                     <span class="close">&times;</span>
                   </div>
                 </div>
-                <!--- pets-popup --->
               </figure>
             </div>
             <div class="col-pets">
@@ -176,7 +176,6 @@
                     <span class="close">&times;</span>
                   </div>
                 </div>
-                <!--- pets-popup --->
               </figure>
             </div>
             <div class="col-pets">
@@ -220,7 +219,6 @@
                     <span class="close">&times;</span>
                   </div>
                 </div>
-                <!--- pets-popup --->
               </figure>
             </div>
             <div class="col-pets">
@@ -264,7 +262,6 @@
                     <span class="close">&times;</span>
                   </div>
                 </div>
-                <!--- pets-popup --->
               </figure>
             </div>
             <div class="col-pets">
@@ -308,7 +305,6 @@
                     <span class="close">&times;</span>
                   </div>
                 </div>
-                <!--- pets-popup --->
               </figure>
             </div>
             <div class="col-pets">
@@ -352,7 +348,6 @@
                     <span class="close">&times;</span>
                   </div>
                 </div>
-                <!--- pets-popup --->
               </figure>
             </div>
             <div class="col-pets">
@@ -396,11 +391,9 @@
                     <span class="close">&times;</span>
                   </div>
                 </div>
-                <!--- pets-popup --->
               </figure>
             </div>
           </div>
-          <!-- holder -->
           <div class="go-to-page">
             <ul>
               <li><a href="#" class="page">1</a></li>
@@ -411,7 +404,8 @@
             </ul>
           </div>
         </div>
-        <!-- container -->
+          </div>
+        </section>
       </main>
       <footer>
         <div class="container">
