--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                             <h2>Not only people <br> need a house</h2>
                             <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, aliquam blanditiis iusto
                         facere totam aut officia praesentium! Debitis, nam incidunt! Aperiam!</span>
-                            <div class="button-make-friend">
-                                <a href="ourpets.html" class="make-friend">Make a friend</a>
+                            <div class="button-pets">
+                                <a href="ourpets.html" class="btn">Make a friend</a>
                             </div>
                         </div>
                     </div>
@@ -363,8 +363,8 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="get-know">
-                            <a href="#" class="button-get-know">Get to know the rest</a>
+                        <div class="button-pets">
+                            <a href="#" class="btn">Get to know the rest</a>
                         </div>
                     </div>
                 </div>
@@ -374,7 +374,7 @@
                     <div class="container">
                         <div class="depiction">
                             <h2>Then you can help<br>
-                        our shelter</h2>
+                            your shelter</h2>
                         </div>
                         <div class="holder-items-help">
                             <div class="item-help">
@@ -519,7 +519,7 @@
     <script>
         $(document).ready(function() {
             $("#my-menu").mmenu({
-                extensions: ["affect-menu-slide", "pagedim-black"]
+                extensions: ["affect-menu-slide", "pagedim-black", "position-right"]
             });
             let api = $("#my-menu").data("mmenu");
             api.bind("open:finish", function() {
