--- a/ourpets.html
+++ b/ourpets.html
@@ -487,7 +487,7 @@
     <script>
       $(document).ready(function() {
         $("#my-menu").mmenu({
-          extensions: ["affect-menu-slide", "pagedim-black"]
+          extensions: ["affect-menu-slide", "pagedim-black", "position-right"]
         });
         let api = $("#my-menu").data("mmenu");
         api.bind("open:finish", function() {
